# mindful_meals

./: README.md  app.py  buildbook.md  index.html  pyproject.toml
.github/workflows/: ci.yml
css/: styles.css
model/: qloo.py
script/: script.js
static/css/: style.css
static/js/: script.js
study_bites/: README.md  app.py  buildbook.md
study_bites.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
study_bites/model/: qloo.py
study_bites/static/js/: script.js
study_bites/utils/: logger.py  ml.py
templates/: index.html
tests/: test_ml.py
utils/: ml.py
